--- a/style.css
+++ b/style.css
@@ -1,122 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-body{
-    background-color: rgb(198, 157, 247);
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@500;600;700&display=swap');
 *{
-    margin: 0;
-    padding: 0;
+    font-family: 'Ysabeau SC', sans-serif; 
+    text-transform: capitalize;
 }
 
-nav{
-    font-family: 'Ubuntu', sans-serif;
+body{
+    background: rgb(43,110,223);
 }
 
-nav ul{
+.parent{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.parent input{
+    padding: 8px 4px;
+    font-size: 18px;
+    font-family:'Ysabeau SC', sans-serif;
+    margin-right: 5px;
+    margin-left: 170px;
+    height: 100%;
+    border-color: rgba(0,0,0,0.1);
+    width: 400px;
+}
+
+.parent button{
+    font-size: 20px;
+    padding: 8px;
+    background: white;
+    border: 2px solid white;
+    color: darkcyan;
+    font-weight: 500;
+    transition: all 0.3 ease;
+
+}
+
+.parent ul{
     display: flex;
-    align-items: center;
-    list-style-type: none;
-    height: 65px;
-    background-color: black;
+    list-style: none;
+    justify-content: center;
+    margin-top: 90px;
+}
+
+.parent ul li{
+    width: 120px;
+    height: 150px;
+    margin-left: 10px;
+    text-align:center;
+    font-size: 25px;
     color: white;
 }
 
-nav ul li{
-    padding: 0 12px;
-}
-.brand img{
-    width: 44px;
-    padding: 0 8px;
-}
-
-.brand {
-    display: flex;
-    align-items: center;
-    font-weight: bolder;
-    font-size: 1.3rem;
-}
-
-.container{
-    min-height: 72vh;
-    background-color: black;
-    color: white;
-   font-family: 'Varela Round', sans-serif;
-   display: flex;
-   margin: 23px auto;
-   width: 70%;
-   border-radius: 12px;
-   padding: 34px;
-   background-image: url('bg.jpg');
-}
-
-.bottom{
-    position: sticky;
-    bottom: 0;
-    height: 130px;
-    background-color: black;
-    color: white;
+.parent ul li span{
+    border-radius: 5px;
+    background: white;
+    text-align: center;
+    display: block;
+    color: #084590;
+    font-size: 30px;
+    width: 120px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
-}
-
-.icons{
-    margin-top: 14px; 
-}
-.icons i{
-    cursor: pointer;
-}
-
-#myProgressBar{
-    width: 80vw; 
-    cursor: pointer;
-}
-
-.songItemContainer{
-    margin-top: 74px;
-}
-
-.songItem{
-    height: 50px;
-    display: flex;
-    background-color: white;
+    margin-bottom: 10px;
     
-    color: black;
-    margin: 12px 0;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 34px;
 }
-
-.songItem img{
-    width: 43px;
-    margin: 0 23px;
-    border-radius: 34px;
-}
-
-.timestamp{
-    margin: 0 23px;
-}
-
-.timestamp i{
-    cursor: pointer;
-}
-
-.songInfo{
-    position: absolute;
-    left: 10vw;
-    font-family: 'Varela Round', sans-serif;
-}
-
-.songInfo img{
-    opacity: 0;
-    transition: opacity 0.4s ease-in;
-}
-
-@media only screen and (max-width: 1100px) {
-    body {
-      background-color: red;
-    }
-  }
