--- a/style.css
+++ b/style.css
@@ -1,70 +1,119 @@
-@import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@500;600;700&display=swap');
 *{
-    font-family: 'Ysabeau SC', sans-serif; 
-    text-transform: capitalize;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-body{
-    background: rgb(43,110,223);
+.container{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(135deg,#153677,#4e085f);
+    padding: 10px;
 }
 
-.parent{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-}
-
-.parent input{
-    padding: 8px 4px;
-    font-size: 18px;
-    font-family:'Ysabeau SC', sans-serif;
-    margin-right: 5px;
-    margin-left: 170px;
-    height: 100%;
-    border-color: rgba(0,0,0,0.1);
-    width: 400px;
-}
-
-.parent button{
-    font-size: 20px;
-    padding: 8px;
+.todo-app{
+    width: 100%;
+    max-width: 540px;
     background: white;
-    border: 2px solid white;
-    color: darkcyan;
-    font-weight: 500;
-    transition: all 0.3 ease;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
 
 }
 
-.parent ul{
+.todo-app h2{
+    color: #002765;
     display: flex;
-    list-style: none;
-    justify-content: center;
-    margin-top: 90px;
-}
-
-.parent ul li{
-    width: 120px;
-    height: 150px;
-    margin-left: 10px;
-    text-align:center;
-    font-size: 25px;
-    color: white;
-}
-
-.parent ul li span{
-    border-radius: 5px;
-    background: white;
-    text-align: center;
-    display: block;
-    color: #084590;
-    font-size: 30px;
-    width: 120px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
-    
+    margin-bottom: 20px;
 }
+
+.todo-app h2 img{
+    width: 30px;
+    margin-left: 10px;
+}
+
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    padding-left: 30px;
+    margin-bottom: 25px;
+
+}
+
+input{
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+    padding: 10px;
+    font-weight: 14px;
+}
+
+button{
+    outline: none;
+    border: none;
+    padding: 16px 50px;
+    background: #ff5945;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 40px;
+
+}
+
+ul li{
+    list-style: none;
+    font-size: 17px;
+    padding: 12px 8px 12px 50px;
+    user-select: none;
+    cursor: pointer;
+    position: relative;
+
+}
+
+ul li::before{
+    content: '';
+    position: absolute;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    background-image: url(/Images/unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top: 12px;
+    left: 8px;
+
+}
+
+ul li.checked{
+    color: #555;
+    text-decoration: line-through;
+}
+
+ul li.checked::before{
+    background-image: url("/Images/checked.png");
+}
+
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+ul li span:hover{
+    background-color: red;
+
+}
+
